style.css
/*font-family: 

Poppins, sans serif
RocknRoll, cursive

Colors:

Primary:

Blood red: hsl(355, 66, 38)
Black: hsl(150, 100, 0)
Grunge Yellow: hsl(49, 16, 53) 

Neutral:

Light gray: hsl(22, 6, 76)
Medium gray: hsl(17, 4, 65)
Deep Gray: hsl(353, 6, 28)

*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    line-height: inherit;
}

header {
    position: fixed;
    width: 100%;
}


nav {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 3rem;
    align-items: center;
    overflow: hidden;
}

.sticky {
    padding: 5px 80px;
    background: red;
    transition: 0.1s ease-in;
}


ul {
    display: flex;
    list-style: none;
    overflow: hidden;
    justify-content: space-between;
    align-items: center;
    gap: 20rem;
    padding: 0;
    margin: 2.8rem;
    transform: translateY(8px);
}

#logo {
    transition: opacity 0.6s ease-in 0.2s;
}

.logo {
    display: block;
    max-width: 200px;
    margin: 0 auto;
    text-align: center;
}

.section-wrapper {
    height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-light-gray);
    text-align: center;
}

.hero-container h1 {
    font-family: var(--font-cursive);
    font-size: 4rem;
    color: var(--color-grunge-yellow);
    margin-bottom: 1rem;
}

.hero-container p {
    font-family: var(--font-sans);
    font-size: 1.25rem;
    color: var(--color-medium-gray)
}

